# computer-graphics

./: CMakeLists.txt  README.md
1/: main.cpp  polygon.cpp
2/: main.cpp
3/: main.cpp
4/: main.cpp
5/: main.cpp
6/: box.cpp  config.h  config.yaml  control.cpp  light.cpp  main.cpp  pyramid.cpp  texture.cpp
7/: box.cpp  config.h  control.cpp  main.cpp  pyramid.cpp  texture.cpp
8/: box.cpp  config.h  config.yaml  control.cpp  light.cpp  main.cpp  pyramid.cpp  shader_m.h
8/shaders/: box.fs  box.vs  lamp.fs  shader.fs  shader.vs
